# SampleCrashHandlerApp

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/ru/mail/search/samplecrashapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/mail/search/samplecrashapp/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/ru/mail/search/samplecrashapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativecrashhandler/: build.gradle
nativecrashhandler/src/androidTest/java/ru/jied83/nativecrashhandler/: ExampleInstrumentedTest.java
nativecrashhandler/src/main/: AndroidManifest.xml
nativecrashhandler/src/main/cpp/: CMakeLists.txt
nativecrashhandler/src/main/cpp/client/linux/handler/: exception_handler.cc
nativecrashhandler/src/main/cpp/client/linux/log/: log.cc
nativecrashhandler/src/main/cpp/common/android/include/: log.h
nativecrashhandler/src/main/cpp/jni/: crashhandlerJni.cc
nativecrashhandler/src/main/java/ru/jied83/nativecrashhandler/jni/: NativeCrashException.kt  NativeCrashHandler.kt  NativeCrashHandlerJni.kt
nativecrashhandler/src/main/res/values/: strings.xml
nativecrashhandler/src/test/java/ru/jied83/nativecrashhandler/: ExampleUnitTest.java
